@@ -4,6 +4,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 
+import advworld.level.Location;
+
 public class StandardPlayer extends Player {
 	
 	protected String name;
